@@ -34,6 +34,7 @@ S3method(assoc, glm)
 S3method(modFit, glm)
 S3method(modFit, loglm)
 S3method(mosaic, glmlist)
+S3method(mosaic, loglmlist)
 
 S3method(summarise, glm)
 S3method(summarise, glmlist)
